--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sneaker-store",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "@expo/vector-icons": "^14.0.0",
+    "expo": "^51.0.28",
+    "expo-constants": "~16.0.2",
+    "expo-font": "^12.0.9",
+    "expo-image": "~1.12.13",
+    "expo-linking": "~6.3.1",
+    "expo-router": "^3.5.23",
+    "expo-splash-screen": "^0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "6.7.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.74.5",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
